--- a/_config.yml
+++ b/_config.yml
@@ -362,6 +362,9 @@ magnet:
     - name: 演示
       display_name: 案例演示笔记
       icon: 🍥
+    - name: 奇奇怪怪
+      display_name: 奇奇怪怪知识
+      icon: 👻
     - name: 恋爱
       display_name: 恋爱日常分享
       icon: 🧡
@@ -384,6 +387,7 @@ encrypt: # hexo-blog-encrypt
   message: 这里记录我和女朋友的一些事情哦，需要密码才能进入!
   tags:
     - { name: 恋爱, password: "wangjinglun" }
+    - { name: 奇奇怪怪, password: "wjldarling.top" }
   theme: xray
   wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
   wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
