--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -122,3 +122,9 @@
       avatar: https://web-1256739961.cos.ap-guangzhou.myqcloud.com/wp/2022/12/博客logo.png
       descr: 本站为共创型技术博客，开放对外注册成为作者并发布技术文章博客；同时也支持开源项目的免费推广，为软件开源尽自己的一份力量。
       siteshot:
+
+    - name: Aegcbx
+      link: https://uu.sssu.us/
+      avatar: https://uu.sssu.us/img/avatar.png
+      descr: 九月露湿，待君之前
+      siteshot: https://pic.imgdb.cn/item/649ad9d51ddac507cc40f140.png
