--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -97,6 +97,11 @@
       descr: 珍惜现在，趁早摸鱼
       siteshot: https://cdn1.tianli0.top/npm/blogimages/pictures/khdslb.webp
 
+    - name: 爱吃肉的猫
+      link: https://meuicat.com/
+      avatar: https://s1.ax1x.com/2023/05/26/p9qChjI.jpg
+      descr: 有肉有猫有生活.
+
 - class_name: 小伙伴🌏
   link_list:
     - name: 好摄之徒
