--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -3,7 +3,7 @@
   link_list:
     - name: 你好可爱
       link: https://wjldarling.top/
-      avatar: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
+      avatar: https://wangjinglun.oss-cn-beijing.aliyuncs.com/images/1.jpg
       descr: 山水一程，三生有幸✨
       siteshot: https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp
 
