--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -272,10 +272,10 @@ reward:
   enable: true
   coinAudio: https://npm.elemecdn.com/akilar-candyassets@1.0.36/audio/aowu.m4a
   QR_code:
-    - img: https://cdn.staticaly.com/gh/1405720461/images@master/img/wx.webp
+    - img: https://cdn.jsdelivr.net/gh/1405720461/images@master/img/wx.webp
       link:
       text: 微信
-    - img: https://cdn.staticaly.com/gh/1405720461/images@master/img/zfb.webp
+    - img: https://cdn.jsdelivr.net/gh/1405720461/images@master/img/zfb.webp
       link:
       text: 支付宝
 
