修改站点关键词

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 你好可爱
 subtitle: ""
 description: "山水一程，三生有幸✨"
-keywords: "javascript,Vue,代码,博客"
+keywords: "Hexo,JavaScript,Vue,React,博客,你好可爱"
 author: 你好可爱
 language: zh-CN
 timezone: ""
