--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -127,3 +127,9 @@
       avatar: https://uu.sssu.us/img/avatar.png
       descr: 九月露湿，待君之前
       siteshot: https://pic.imgdb.cn/item/649ad9d51ddac507cc40f140.png
+
+    - name: 呆鱼
+      link: https://daiyu.fun/
+      avatar: https://daiyu.fun/img/avatar.png
+      descr: Hello World！
+      screenshot: https://daiyu.fun/img/screenshot.png
