--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -67,11 +67,11 @@
       descr: 正因为是一张白纸 才可以随心所欲地描绘地图
       siteshot: https://gcore.jsdelivr.net/gh/linjiangyu2/halo@master/img/siteshot.jpg
 
-    - name: Iridescent Trajectory🌠
-      link: https://ovoz.cn
-      avatar: https://ovoz.cn/assets/avatar.webp
-      descr: 蝉鸣如雨,花霄道中🍭🍭🍭
-      siteshot: https://ovoz.cn/assets/ovoz.cn.jpg
+    - name: 虹色轨迹🌠
+      link: https://illlli.com
+      avatar: https://illlli.com/assets/avatar.webp
+      descr: 做一颗星星，有棱有角，黑暗中闪闪发光🍭🍭🍭
+      siteshot: https://illlli.com/assets/illlli.webp
 
     - name: Shine
       link: https://blog.shineyu.cn/
