--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -96,6 +96,11 @@
       avatar: https://s1.ax1x.com/2023/05/26/p9qChjI.jpg
       descr: 有肉有猫有生活.
 
+    - name: indude - 个人文章分享
+      link: https://indude.cn/
+      avatar: https://q2.qlogo.cn/g?b=qq&nk=656497229&s=100
+      descr: 分享一些想法和文章.
+
 - class_name: 小伙伴🌏
   link_list:
     - name: 好摄之徒
