--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -955,10 +955,10 @@ inject:
 
   bottom:
     - <script src="https://cdn.staticfile.org/jquery/3.6.3/jquery.min.js"></script> # jQuery
-    - <script async src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script> # VUE
-    - <script async src="https://cdn.jsdelivr.net/npm/element-ui@2.15.6/lib/index.js"></script> # ElementUI
+    - <script async src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.14/vue.min.js"></script> # VUE
+    - <script async src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.6/index.js"></script> # ElementUI
     - <script async src="https://cdn.bootcdn.net/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script> # 分享按钮依赖
-    - <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@8.19.0/dist/sweetalert2.all.js"></script> # 节日弹窗依赖
+    - <script defer type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/sweetalert2/8.19.1/sweetalert2.all.js"></script> # 节日弹窗依赖
     - <script async src="//npm.elemecdn.com/pace-js@1.2.4/pace.min.js"></script> # 顶部进度条js
     - <script defer src="https://cdn.jsdelivr.net/gh/nextapps-de/winbox/dist/winbox.bundle.min.js"></script> # winbox
     - <script async src="//at.alicdn.com/t/c/font_3586335_hsivh70x0fm.js"></script> # js图标引入1
