--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -138,3 +138,9 @@
       avatar: https://daiyu.fun/img/avatar.png
       descr: Hello World！
       screenshot: https://daiyu.fun/img/screenshot.png
+
+    - name: 栋dong的个人站点
+      link: https://dongdong741236.cn
+      avatar: https://dongdong741236.cn/wp-content/uploads/2022/12/cropped-栋.jpg
+      descr: 乾坤未定，你我皆为牛马
+      screenshot: https://dongdong741236.cn/wp-content/uploads/dongdong741236.cn_.jpg
