--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -52,8 +52,8 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  QQ: https://res.abeim.cn/api/qq/?qq=1405720461 || icon-QQ || faa-tada
-  微信: /assets/QRCode.jpg || icon-weixin || faa-tada
+  QQ: /assets/qq.png || icon-QQ || faa-tada
+  微信: /assets/wx.png || icon-weixin || faa-tada
   Github: https://github.com/1405720461 || icon-github || faa-tada
   B站: https://space.bilibili.com/392071577 || icon-bilibili || faa-tada
   力扣: https://leetcode.cn/u/wjldarling/ || icon-leetcode || faa-tada
