📃 docs(友人帐): 添加友链

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -144,3 +144,9 @@
       avatar: https://dongdong741236.cn/wp-content/uploads/2022/12/cropped-栋.jpg
       descr: 乾坤未定，你我皆为牛马
       screenshot: https://dongdong741236.cn/wp-content/uploads/dongdong741236.cn_.jpg
+
+    - name: 微生之最
+      link: https://www.bbixb.top
+      avatar: https://q1.qlogo.cn/g?b=qq&nk=1748326225&s=640
+      descr: 用技术改变世界
+      screenshot: https://www.lequxiang.com.cn/view.php/56764ea8cdfb968730a97bb28e46c87f.png
