✨ feat(友人帐): 添加友链

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -170,3 +170,9 @@
       avatar: https://q1.qlogo.cn/g?b=qq&nk=1748326225&s=640
       descr: 用技术改变世界
       screenshot: https://www.lequxiang.com.cn/view.php/56764ea8cdfb968730a97bb28e46c87f.png
+
+    - name: Oyiso's Blog
+      link: https://oyiso.cn
+      avatar: https://oyiso.cn/logo.png
+      descr: The shortest answer is doing
+      screenshot:
